[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/colorChanger.gd" type="Script" id=2]

[node name="colorChanger" type="Button"]
margin_left = 416.0
margin_top = 40.0
margin_right = 480.0
margin_bottom = 73.0
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 2.0
margin_right = -5.0
margin_bottom = -2.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 43.0
margin_top = -16.5
margin_right = 315.0
margin_bottom = 89.5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 268.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="PanelContainer" parent="panel/vbox"]
margin_right = 264.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="panel/vbox/R"]
margin_left = 7.0
margin_top = 7.0
margin_right = 257.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="panel/vbox/R/HBoxContainer"]
margin_top = 1.0
margin_right = 25.0
margin_bottom = 15.0
text = "RED"

[node name="R" type="HSlider" parent="panel/vbox/R/HBoxContainer"]
margin_left = 29.0
margin_right = 250.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.3
max_value = 1.0
step = 0.1
value = 0.4

[node name="G" type="PanelContainer" parent="panel/vbox"]
margin_top = 34.0
margin_right = 264.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="panel/vbox/G"]
margin_left = 7.0
margin_top = 7.0
margin_right = 257.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="panel/vbox/G/HBoxContainer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "GREEN"

[node name="G" type="HSlider" parent="panel/vbox/G/HBoxContainer"]
margin_left = 46.0
margin_right = 250.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.3
max_value = 1.0
step = 0.1
value = 0.4

[node name="B" type="PanelContainer" parent="panel/vbox"]
margin_top = 68.0
margin_right = 264.0
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="panel/vbox/B"]
margin_left = 7.0
margin_top = 7.0
margin_right = 257.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="panel/vbox/B/HBoxContainer"]
margin_top = 1.0
margin_right = 33.0
margin_bottom = 15.0
text = "BLUE"

[node name="B" type="HSlider" parent="panel/vbox/B/HBoxContainer"]
margin_left = 37.0
margin_right = 250.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.3
max_value = 1.0
step = 0.1
value = 0.4

[connection signal="color_changed" from="." to="." method="_on_colorChanger_color_changed"]
[connection signal="pressed" from="." to="." method="_on_colorChanger_pressed"]
[connection signal="value_changed" from="panel/vbox/R/HBoxContainer/R" to="." method="_on_R_value_changed"]
[connection signal="value_changed" from="panel/vbox/G/HBoxContainer/G" to="." method="_on_G_value_changed"]
[connection signal="value_changed" from="panel/vbox/B/HBoxContainer/B" to="." method="_on_B_value_changed"]
